# Computer-Graphics_Projects

./: README.md
assignment_0/: README.md
assignment_0/scenes/combo/: combo.sce
assignment_0/scenes/molecule2/: molecule2.sce
assignment_0/scenes/office/: stuhl_polster.off  tisch.off
assignment_0/scenes/solid_color/: solid_color.sce
assignment_0/scenes/toon_faces/: toon_faces.sce
assignment_0/src/: CMakeLists.txt  Cylinder.cpp  Plane.cpp  Ray.h  Scene.cpp  Scene.h  StopWatch.h
assignment_1/: Doxyfile.in  README.md
assignment_1/scenes/mask/: mask.sce
assignment_1/scenes/office/: boden.off  fenster.off  glas.off  griffe.off  stuhl_beine.off
assignment_1/scenes/toon_faces/: sad.off  smile.off
assignment_1/src/: Camera.h  Cylinder.cpp  Object.h  Plane.cpp  Scene.h  cylinder_equations.txt  raytrace.cpp  vec3.h
assignment_11/: CMakeLists.txt  README.md
assignment_11/lib/lodePNG/: CMakeLists.txt
assignment_11/src/: CMakeLists.txt  bezier.cpp  bezier.h  billboard.h  earth.frag  earth.vert  frame.h  glfw_window.cpp  glmath.cpp  glmath.h  path.h  phong.frag  phong.vert  shader.cpp  ship.h  solar_viewer.cpp  solar_viewer.h  solid_color.frag  solid_color.vert  texture.cpp
assignment_2/: CMakeLists.txt  README.md
assignment_2/expected_results/: 1.py
assignment_2/scenes/molecule/: molecule.sce
assignment_2/scenes/office/: office.sce  tisch_beine.off  wand.off
assignment_2/scenes/rings/: ring1.off  ring2.off
assignment_2/scenes/solid_color/: solid_color.sce
assignment_2/scenes/spheres/: spheres.sce
assignment_2/scenes/toon_faces/: kiss.off  neutral.off
assignment_2/src/: Cylinder.cpp  Cylinder.h  Image.h  Material.h  Mesh.cpp  Mesh.h  Plane.cpp  Scene.cpp
assignment_3/: CMakeLists.txt  README.md
assignment_3/cmake/: FindTBB.cmake
assignment_3/scenes/cube/: cube.sce
assignment_3/scenes/cylinders/: cylinders.sce
assignment_3/scenes/mask/: mask.off
assignment_3/scenes/mirror/: mirror.sce
assignment_3/scenes/movie/: gen_movie.sh
assignment_3/scenes/office/: heizung.off  office.sce  saeulen.off  schraenke.off
assignment_3/scenes/rings/: rings.sce
assignment_3/src/: CMakeLists.txt  Cylinder.cpp  Light.h  Mesh.cpp  Plane.cpp  Plane.h  Scene.cpp  Scene.h  SolveQuadratic.h  Sphere.cpp  Sphere.h  debug_aabb.cpp  vec3.cpp
assignment_4/: CMakeLists.txt  README.md
assignment_4/lib/glew/: glew.vcxproj
assignment_4/src/: CMakeLists.txt  billboard.cpp  billboard.h  color.vert  earth.frag  earth.vert  glfw_window.cpp  glfw_window.h  glmath.h  main.cpp  phong.frag  phong.vert  ship.cpp  ship.h  solar_viewer.cpp  sphere.cpp  sphere.h  sun.frag  sun.vert  texture.h
assignment_4/textures/: spaceship.off
assignment_5/: README.md  doxy.css
assignment_5/lib/glew/: CMakeLists.txt
assignment_5/src/: billboard.cpp  color.vert  earth.frag  earth.vert  glmath.cpp  phong.frag  phong.vert  planet.h  shader.h  solar_viewer.cpp  sun.vert  texture.cpp
assignment_5/textures/: cube.off
assignment_6/: Doxyfile.in  README.md
assignment_6/src/: earth.frag  earth.vert  gl.h  glmath.h  phong.frag  phong.vert  shader.cpp  solar_viewer.cpp  solar_viewer.h  sphere.h  sun.frag  sun.vert  texture.cpp
assignment_7/: CMakeLists.txt  README.md
assignment_7/meshes/: confused.off  puff.off
assignment_7/shaders/: cube_map_visualization.frag  cube_map_visualization.vert  phong_shadow.frag  phong_shadow.vert  shadowmap_gen.frag  shadowmap_gen.vert  solid_color.frag  solid_color.vert
assignment_7/src/: CMakeLists.txt  CubeMapVisualization.h  Mesh.cpp  Mesh.h  PointLightShadowMap.hh  Quad.h  ShadowViewer.cpp  ShadowViewer.h  dumpOpenGLBuffer.h  glmath.cpp  glmath.h  main.cpp  sphere.cpp
assignment_8/: .gitignore  CMakeLists.txt  run_deterministic.bat  run_deterministic.sh  run_reverse.bat  run_reverse.sh  run_stochastic.bat  run_stochastic.sh
assignment_8/data_in/: plant_01.json  plant_02.json  plant_03.json  plant_04.json  plant_05.json  plant_06.json  sierpinski_square.json  sierpinski_triangle.json  square_01.json  square_02.json  square_03.json  square_04.json  square_05.json  square_05.json.txt  stochastic_00.json  stochastic_01.json  stochastic_02.json
assignment_8/data_out_example/: plant_01.txt
assignment_8/reverse_in/: crossout.json  flower_tree.json  hexerode.json  left_plant.json
assignment_8/shaders/: line.frag  line.vert  textured.frag  textured.vert
assignment_8/src/: lsystem.cpp  lsystem.h  lsystem_load.cpp  main.cpp
assignment_8/src/utils/: LSystemViewer.cpp  LSystemViewer.h  Quad.h  glfw_window.cpp  glfw_window.h  glmath.h  misc.cpp  misc.h  render_2d.cpp  render_2d.h  render_svg.cpp  render_svg.h  shader.h  vec.cpp  vec.h
assignment_9/: CMakeLists.txt  run_marble.sh  run_perlin_1d.sh  run_perlin_2d.sh  run_turbulence.sh
assignment_9/lib/: .gitignore
assignment_9/lib/glew/: CMakeLists.txt
assignment_9/lib/glfw/: CMakeLists.txt
assignment_9/scripts/: convert_scripts.py  run_fbm.sh  run_map.sh  run_wood.sh  terrain.sh
assignment_9/scripts_win/: run_fbm.bat  run_map.bat  run_marble.bat  run_perlin_1d.bat  run_perlin_2d.bat  run_turbulence.bat  run_wood.bat  terrain.bat
assignment_9/src/: main_shader_viewer.cpp  main_terrain.cpp
assignment_9/src/render/: Mesh.cpp  Mesh.h  MeshViewer.cpp  MeshViewer.h  Quad.h  ShaderViewer.cpp  ShaderViewer.h  StaticMeshActor.cpp  StaticMeshActor.h  gl.h  glfw_window.cpp  glfw_window.h  shader.cpp  shader.h
assignment_9/src/shaders/: display.vert  display_fbm.frag  display_fbm_terrain.frag  display_liquid.frag  display_map.frag  display_marble.frag  display_perlin.frag  display_plots.frag  display_turbulence.frag  display_wood.frag  noise.frag  terrain.frag  terrain.vert  textured.frag  textured.vert
assignment_9/src/utils/: array2d.h  vec.cpp  vec.h
